# MemoryOS

./: .env.example  CLAUDE.md  Dockerfile  README.md  readme_cn.md  requirements.txt
.claude/: settings.local.json
eval/: long_term_memory.py  main_loco_parse.py  mid_term_memory.py  pyproject.toml  utils.py
memoryos-chromadb/: long_term.py  memoryos.py  mid_term.py  pyproject.toml  updater.py  utils.py
memoryos-mcp/: mcp.json  pyproject.toml  server_new.py
memoryos-mcp/memoryos/: memoryos.py  mid_term.py  updater.py  utils.py
memoryos-playground/: long_term.py  memoryos.py  mid_term.py  pyproject.toml  test.py  updater.py  utils.py
memoryos-playground/memdemo/: app.py  start_demo.sh
memoryos-pypi/: long_term.py  memoryos.py  mid_term.py  prompts.py  pyproject.toml  updater.py  utils.py
tests/: test_cwe22_app_flask.py  test_cwe22_path_traversal.py
